swagger updated for CRUD fee structure
