# router/feeStructure.js
@@ -1,6 +1,7 @@
 const express = require('express');
+
 const router = express.Router();
-const feeStructureController = require('../controllers/feeStructure');
+const feeStructureController = require('../controller/feeStructure');
 
 // CREATE
 router.post('/', feeStructureController.create);
@@ -17,13 +18,19 @@ router.delete('/:id', feeStructureController.delete);
 // LIST
 router.get('/', feeStructureController.list);
 
-// ADD FEE DETAIL
-router.post('/:id/fee-details', feeStructureController.addFeeDetail);
+// // ADD FEE DETAIL
+// router.post('/:id/fee-details', feeStructureController.addFeeDetail);
 
-// UPDATE FEE DETAIL
-router.put('/:id/fee-details/:feeDetailId', feeStructureController.updateFeeDetail);
+// // UPDATE FEE DETAIL
+// router.put(
+// 	'/:id/fee-details/:feeDetailId',
+// 	feeStructureController.updateFeeDetail
+// );
 
-// DELETE FEE DETAIL
-router.delete('/:id/fee-details/:feeDetailId', feeStructureController.deleteFeeDetail);
+// // DELETE FEE DETAIL
+// router.delete(
+// 	'/:id/fee-details/:feeDetailId',
+// 	feeStructureController.deleteFeeDetail
+// );
 
 module.exports = router;
