# swagger.json
@@ -981,27 +981,39 @@
             "example": "2023-2024"
           },
           {
+            "name": "schoolId",
+            "in": "formData",
+            "description": "The schoolId of the fee structure",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "classes",
             "in": "formData",
             "description": "The classes of students for whom the fee structure is created",
             "required": true,
             "type": "array",
+            "collectionFormat": "multi",
             "items": {
               "type": "object",
               "properties": {
                 "name": {
                   "type": "string"
                 },
-                "sectionsId": {
+                "sectionId": {
                   "type": "string"
                 }
               },
-              "required": ["name", "sectionsId"]
+              "required": ["name", "sectionId"]
             },
             "example": [
               {
                 "name": "class 1A",
-                "sectionsId": "5f5f5f5f5f5f5f5f5f5f5f5f"
+                "sectionId": "5f5f5f5f5f5f5f5f5f5f5f5f"
+              },
+              {
+                "name": "class 1B",
+                "sectionId": "5f5f5f5f5f5f5f5f5f5f5f5e"
               }
             ]
           },
@@ -1104,7 +1116,7 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "Fee Structure with this name already exists"
+                  "example": "Fee Structure With This Name Already Exists"
                 }
               }
             }
@@ -1157,6 +1169,439 @@
                   "type": "string",
                   "example": "Created Successfully"
                 }
+              },
+              "example": {
+                "success": true,
+                "data": {
+                  "feeStructureName": "Second Structure",
+                  "academicYear": "2023-2024",
+                  "schoolId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                  "classes": [
+                    {
+                      "name": "class 1A",
+                      "sectionId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "_id": "6417ea80553330d58e3d6989"
+                    }
+                  ],
+                  "description": "the description",
+                  "feeDetails": [
+                    {
+                      "feeTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "scheduleTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "scheduledDates": [
+                        {
+                          "date": "2023-03-20T04:46:44.263Z",
+                          "amount": 289,
+                          "_id": "6417ea80553330d58e3d698b"
+                        },
+                        {
+                          "date": "2023-04-20T04:46:44.263Z",
+                          "amount": 289,
+                          "_id": "6417ea80553330d58e3d698c"
+                        }
+                      ],
+                      "totalAmount": 578,
+                      "breakdown": 2,
+                      "_id": "6417ea80553330d58e3d698a"
+                    }
+                  ],
+                  "totalAmount": 578,
+                  "_id": "6417ea80553330d58e3d6988",
+                  "__v": 0
+                },
+                "resultCount": 1,
+                "message": "Created Successfully"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Fee Structure"],
+        "summary": "Get all fee structures",
+        "description": "Get all fee structures with filter and pagination",
+        "operationId": "getAllFeeStructures",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "schoolId",
+            "in": "query",
+            "description": "The school id of the fee structure",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "The class id of the fee structure",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "The class id of the fee structure",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "feeStructureName": {
+                        "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
+                      },
+                      "academicYear": {
+                        "type": "string"
+                      },
+                      "classes": {
+                        "type": "array"
+                      },
+                      "feeDetails": {
+                        "type": "array"
+                      },
+                      "schoolId": {
+                        "type": "string"
+                      },
+                      "totalAmount": {
+                        "type": "integer"
+                      },
+                      "createdAt": {
+                        "type": "string"
+                      },
+                      "updatedAt": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                },
+                "resultCount": {
+                  "type": "integer",
+                  "example": 1
+                },
+                "message": {
+                  "type": "string",
+                  "example": "All Fee Structures"
+                }
+              },
+              "example": {
+                "success": true,
+                "data": [
+                  {
+                    "feeStructureName": "Secon  Structure",
+                    "academicYear": "2023-2024",
+                    "schoolId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                    "classes": [
+                      {
+                        "name": "class 1A",
+                        "sectionId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                        "_id": "64181f16b1c774f84228257b"
+                      }
+                    ],
+                    "description": "the description",
+                    "feeDetails": [
+                      {
+                        "feeTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                        "scheduleTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                        "scheduledDates": [
+                          {
+                            "date": "2023-03-20T04:46:44.263Z",
+                            "amount": 289,
+                            "_id": "64181f16b1c774f84228257d"
+                          },
+                          {
+                            "date": "2023-04-20T04:46:44.263Z",
+                            "amount": 289,
+                            "_id": "64181f16b1c774f84228257e"
+                          }
+                        ],
+                        "totalAmount": 578,
+                        "breakdown": 2,
+                        "_id": "64181f16b1c774f84228257c"
+                      },
+                      {
+                        "feeTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                        "scheduleTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                        "scheduledDates": [
+                          {
+                            "date": "2023-03-20T04:46:44.263Z",
+                            "amount": 289,
+                            "_id": "64181f16b1c774f842282580"
+                          },
+                          {
+                            "date": "2023-04-20T04:46:44.263Z",
+                            "amount": 289,
+                            "_id": "64181f16b1c774f842282581"
+                          }
+                        ],
+                        "totalAmount": 578,
+                        "breakdown": 2,
+                        "_id": "64181f16b1c774f84228257f"
+                      }
+                    ],
+                    "totalAmount": 578,
+                    "_id": "64181f16b1c774f84228257a",
+                    "__v": 0
+                  }
+                ],
+                "resultCount": 1,
+                "message": "Created Successfully"
+              }
+            }
+          },
+          "404": {
+            "description": "No Fee Type Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                }
+              },
+              "example": {
+                "status": "fail",
+                "message": "No Fee Type Found"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/feestructure/{id}": {
+      "get": {
+        "tags": ["Fee Structure"],
+        "summary": "Get a fee structure",
+        "description": "Get a fee structure by id",
+        "operationId": "getFeeStructure",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the fee structure",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "No Fee Structure Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                }
+              },
+              "example": {
+                "status": "fail",
+                "message": "Fee Structure not found"
+              }
+            }
+          },
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "feeStructureName": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
+                    "academicYear": {
+                      "type": "string"
+                    },
+                    "classes": {
+                      "type": "array"
+                    },
+                    "feeDetails": {
+                      "type": "array"
+                    },
+                    "schoolId": {
+                      "type": "string"
+                    },
+                    "totalAmount": {
+                      "type": "integer"
+                    },
+                    "createdAt": {
+                      "type": "string"
+                    },
+                    "updatedAt": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "resultCount": {
+                  "type": "integer",
+                  "example": 1
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Fetched Successfully"
+                }
+              },
+              "example": {
+                "success": true,
+                "data": {
+                  "feeStructureName": "Secon  Structure",
+                  "academicYear": "2023-2024",
+                  "schoolId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                  "classes": [
+                    {
+                      "name": "class 1A",
+                      "sectionId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "_id": "64181f16b1c774f84228257b"
+                    }
+                  ],
+                  "description": "the description",
+                  "feeDetails": [
+                    {
+                      "feeTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "scheduleTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "scheduledDates": [
+                        {
+                          "date": "2023-03-20T04:46:44.263Z",
+                          "amount": 289,
+                          "_id": "64181f16b1c774f84228257d"
+                        },
+                        {
+                          "date": "2023-04-20T04:46:44.263Z",
+                          "amount": 289,
+                          "_id": "64181f16b1c774f84228257e"
+                        }
+                      ],
+                      "totalAmount": 578,
+                      "breakdown": 2,
+                      "_id": "64181f16b1c774f84228257c"
+                    },
+                    {
+                      "feeTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "scheduleTypeId": "5f5f5f5f5f5f5f5f5f5f5f5f",
+                      "scheduledDates": [
+                        {
+                          "date": "2023-03-20T04:46:44.263Z",
+                          "amount": 289,
+                          "_id": "64181f16b1c774f842282580"
+                        },
+                        {
+                          "date": "2023-04-20T04:46:44.263Z",
+                          "amount": 289,
+                          "_id": "64181f16b1c774f842282581"
+                        }
+                      ],
+                      "totalAmount": 578,
+                      "breakdown": 2,
+                      "_id": "64181f16b1c774f84228257f"
+                    }
+                  ],
+                  "totalAmount": 578,
+                  "_id": "64181f16b1c774f84228257a",
+                  "__v": 0
+                },
+                "resultCount": 1,
+                "message": "Created Successfully"
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Fee Structure"],
+        "summary": "Delete a fee structure",
+        "description": "Delete a fee structure by id",
+        "operationId": "deleteFeeStructure",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the fee structure",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "No Fee Structure Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                }
+              },
+              "example": {
+                "status": "fail",
+                "message": "Fee Structure not found"
+              }
+            }
+          },
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean"
+                },
+                "data": {
+                  "type": "undefined",
+                  "example": null
+                },
+                "resultCount": {
+                  "type": "integer",
+                  "example": 1
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Deleted Successfully"
+                }
+              },
+              "example": {
+                "success": true,
+                "data": null,
+                "resultCount": 1,
+                "message": "Deleted Successfully"
               }
             }
           },
